Fri Aug 29 17:06:11 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/getdata.c(added):
	- fix a core getting text with SQLGetData

Fri Aug 29 16:17:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- remove _sql_bind_info structure, use ARD instead

Fri Aug 29 00:07:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - use IRD (SQLDescribeCol, SQLNumResultCols)
	 - minor issues and update
	- fixed possible buffer overflow
	
Thu Aug 28 21:42:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/descriptor.c src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - populate IRD (updated)
	- check res_info <=> IRD consistency and add some temporary fix

Thu Aug 28 18:03:16 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - SQLGetStmtAttr and SQLGetStmtOption

Thu Aug 28 17:11:52 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch
	 - add statement attributes and initialize them
	- rename a constant

Thu Aug 28 07:45:55 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/odbc.c src/tds/mem.c:
	* src/tds/token.c:
	- Applied Peter Daecon patch
	 - SQLSetDescField declaration
	 - SQLGetInfo is not connected return some error
	 - inizialize correctly some sqlstates in client messages
	 - add some sqlstates from native errors

Wed Aug 27 15:06:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c: 
	- move lastrc in sql_errors structure
	* src/odbc/odbc.c: small comment fix
	* src/odbc/checkexport.sh vms/odbc_driver_axp.opt:
	* win32/FreeTDS.def:
	- update exports from system that require explicit symbols list
