@@ -42,7 +42,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: sql2tds.c,v 1.17 2003-08-26 14:57:36 freddy77 Exp $";
+static char software_version[] = "$Id: sql2tds.c,v 1.18 2003-08-29 15:47:56 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static TDS_INT
@@ -112,6 +112,14 @@ sql2tds(TDS_DBC * dbc, struct _sql_param_info *param, TDSPARAMINFO * info, int n
 	TDSCOLINFO *curcol = info->columns[nparam];
 	int len;
 	TDS_DATETIME dt;
+	SQLINTEGER sql_len;
+
+	/* TODO procedure, macro ?? see prepare_query */
+	sql_len = 0;
+	if (param->apd_sql_desc_indicator_ptr && *param->apd_sql_desc_indicator_ptr == SQL_NULL_DATA)
+		sql_len = SQL_NULL_DATA;
+	else if (param->apd_sql_desc_octet_length_ptr)
+		sql_len = *param->apd_sql_desc_octet_length_ptr;
 
 	/* TODO handle bindings of char like "{d '2002-11-12'}" */
 	tdsdump_log(TDS_DBG_INFO2, "%s:%d type=%d\n", __FILE__, __LINE__, param->ipd_sql_desc_type);
@@ -127,7 +135,7 @@ sql2tds(TDS_DBC * dbc, struct _sql_param_info *param, TDSPARAMINFO * info, int n
 	if (param->ipd_sql_desc_parameter_type != SQL_PARAM_INPUT)
 		curcol->column_output = 1;
 	if (curcol->column_varint_size != 0) {
-		switch (*param->apd_sql_desc_octet_length_ptr) {
+		switch (sql_len) {
 		case SQL_NULL_DATA:
 			len = 0;
 			break;
@@ -140,11 +148,11 @@ sql2tds(TDS_DBC * dbc, struct _sql_param_info *param, TDSPARAMINFO * info, int n
 			return TDS_CONVERT_FAIL;
 			break;
 		default:
-			if (*param->apd_sql_desc_octet_length_ptr < 0)
+			if (sql_len < 0)
 				return TDS_CONVERT_FAIL;
-			/* len = SQL_LEN_DATA_AT_EXEC(*param->apd_sql_desc_octet_length_ptr); */
+			/* len = SQL_LEN_DATA_AT_EXEC(sql_len); */
 			else
-				len = *param->apd_sql_desc_octet_length_ptr;
+				len = sql_len;
 
 		}
 		curcol->column_cur_size = curcol->column_size = len;
@@ -184,7 +192,7 @@ sql2tds(TDS_DBC * dbc, struct _sql_param_info *param, TDSPARAMINFO * info, int n
 		return TDS_CONVERT_FAIL;
 
 	/* set null */
-	if (*param->apd_sql_desc_octet_length_ptr == SQL_NULL_DATA || param->ipd_sql_desc_parameter_type == SQL_PARAM_OUTPUT) {
+	if (sql_len == SQL_NULL_DATA || param->ipd_sql_desc_parameter_type == SQL_PARAM_OUTPUT) {
 		curcol->column_cur_size = 0;
 		tds_set_null(info->current_row, nparam);
 		return TDS_SUCCEED;
